[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ComfyUI_AutoBatchRunner" 
version = "0.0.3" 
description = "This script adds an automatic batch runner UI to ComfyUI. The underscore in ComfyUI_AutoBatchRunner is a naming error. Please use ComfyUI-AutoBatchRunner."
readme = "README.md"
authors = [
    {name = "Boba-svg"}, 
]
license = {file = "LICENSE"} 
requires-python = ">=3.10" 

dependencies = [
    "requests", 
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License", 
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Boba-svg/ComfyUI_AutoBatchRunner"
Repository = "https://github.com/Boba-svg/ComfyUI_AutoBatchRunner"

[tool.comfy]
PublisherId = "boba-svg" 

DisplayName = "ComfyUI_AutoBatchRunner" 

